--- a/frontend/src/components/trends/ShowStokInfo.module.css
+++ b/frontend/src/components/trends/ShowStokInfo.module.css
@@ -1,5 +1,5 @@
 .stockinfo {
-  background-color: rgb(75, 74, 74);
+  background-color: white;
   width: 57%;
   height: 18rem;
   border-radius: 1rem;
