--- a/frontend/src/components/portfolio/UserBalance.module.css
+++ b/frontend/src/components/portfolio/UserBalance.module.css
@@ -10,7 +10,11 @@
   text-align: center;
   border-radius: 1rem;
 }
-
+.balance input {
+  margin: 1rem;
+  border-radius: 0.5rem;
+  color: black;
+}
 .balance div {
   width: 59%;
   padding: 1%;
