--- a/frontend/src/components/portfolio/CashHistory.module.css
+++ b/frontend/src/components/portfolio/CashHistory.module.css
@@ -1,5 +1,5 @@
 .cashorder {
-  background-color: rgb(75, 74, 74);
+  background-color: #2b453c;
   border-radius: 1rem;
   width: 25%;
   height: 26rem;
