--- a/frontend/src/components/layout/Header.module.css
+++ b/frontend/src/components/layout/Header.module.css
@@ -11,7 +11,7 @@
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   text-align: center;
-  background-color: white;
+  background-color: #d8d0c0;
 }
 
 .header h1:before {
